--- a/src/app/authentication/pages/register/register.component.html
+++ b/src/app/authentication/pages/register/register.component.html
@@ -214,7 +214,7 @@
 <!-- Modal Validar -->
 <ng-template #add let-modal>
     <div class="modal-header">
-        <h5 class="modal-title"><b>Validar Pack</b></h5>
+        <h5 class="modal-title"><b>Validar Voucher Pack</b></h5>
         <button type="button" class="close" aria-label="Close" (click)="closeModal()">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -243,7 +243,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-12 mb-2">
-            <small>Fecha</small>
+            <small>Fecha Pago</small>
             <div class="form-group">
                 <div class="input-group">
                     <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
