--- a/src/app/panel/pages/referidos/referidos.component.html
+++ b/src/app/panel/pages/referidos/referidos.component.html
@@ -92,7 +92,7 @@
                     <div class="card-body">
                         <h2>Añade un amigo</h2>
                         <form [formGroup]="formRegister" class="row">
-                            <div class="col-lg-5 col-md-5 col-sm-12">
+                            <div class="col-lg-4 col-md-4 col-sm-12">
                                 <div class="form-group">
                                     <ng-select formControlName="pais"
                                             [items]="pais"
@@ -103,7 +103,7 @@
                                     </ng-select>
                                 </div>
                             </div>
-                            <div class="col-lg-5 col-md-5 col-sm-12">
+                            <div class="col-lg-4 col-md-5 col-sm-12">
                                 <div class="form-group">
                                     <div class="input-group">
                                         <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
@@ -115,7 +115,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-2 col-md-2 col-sm-12">
+                            <div class="col-lg-4 col-md-4 col-sm-12">
                                 <div class="form-group">
                                     <ng-select formControlName="genero"
                                             [items]="genero"
@@ -297,7 +297,7 @@
 <!-- Modal Validar -->
 <ng-template #add let-modal>
     <div class="modal-header">
-        <h5 class="modal-title"><b>Validar Pack</b></h5>
+        <h5 class="modal-title"><b>Validar Voucher Pack</b></h5>
         <button type="button" class="close" aria-label="Close" (click)="closeModalValidate()">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -326,7 +326,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-12 mb-2">
-            <small>Fecha</small>
+            <small>Fecha Pago</small>
             <div class="form-group">
                 <div class="input-group">
                     <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
