--- a/src/app/panel/pages/comisiones/comisiones.component.html
+++ b/src/app/panel/pages/comisiones/comisiones.component.html
@@ -10,9 +10,12 @@
 </div>
 <div class="card">
     <div class="card-header">
-        COMISIONES
+        HISTORIAL COMISIONES
     </div>
     <div class="card-body row">
+        <div class="col-sm-12 col-md-12 col-lg-12 text-center">
+            <span class="badge rounded-pill bg-primary" style="font-size: 15px;">COMISIÓN TOTAL: S/ {{(total_ganancia).toFixed(2)}}</span>
+        </div>
         <div class="col-sm-12 col-md-12 col-lg-12">
             <!--TABLA-->
             <div class="table-responsive invoice-table" id="table">
@@ -20,6 +23,7 @@
                 <thead>
                 <tr>
                     <th class="text-center">NOMBRES Y APELLIDOS</th>
+                    <th class="text-center">PACK</th>
                     <th class="text-center">IMPORTE</th>
                     <th class="text-center">NIVEL</th>
                     <th class="text-center">GANANCIAS</th>
@@ -32,6 +36,9 @@
                     </td> -->
                     <td class="text-center text-dark">
                         {{valComisiones.nombre}} {{valComisiones.apellido}}
+                    </td>
+                    <td class="text-center text-dark">
+                        {{valComisiones.pack_name}}
                     </td>
                     <td class="text-center text-dark">
                         <div *ngIf="valComisiones.importe">
