--- a/src/app/panel/pages/perfil/perfil.component.html
+++ b/src/app/panel/pages/perfil/perfil.component.html
@@ -26,7 +26,7 @@
                                     <div class="profile-img-content text-dark text-start">
                                         <div class="text-dark">
                                             <h3 class="h3 mb-2 text-capitalize">{{userName}}</h3>
-                                            <h5 class="text-muted">Web Developer</h5>
+                                            <h5 class="text-muted">Afiliado</h5>
                                         </div>
                                     </div>
                                 </div>
