--- a/src/app/panel/pages/h-reconsumo/h-reconsumo.component.html
+++ b/src/app/panel/pages/h-reconsumo/h-reconsumo.component.html
@@ -55,7 +55,7 @@
 <ng-template #modal_img let-modal>
     <div class="modal-body row">
         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-            <h5>Imagen Comprobante {{data_detalle.cliente.id}} {{data_detalle.cliente.id}}</h5>
+            <h5>Imagen Comprobante {{data_detalle.cliente.nombre}} {{data_detalle.cliente.apellido}}</h5>
             <hr>
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
