--- a/src/app/panel/pages/dashboard/dashboard.component.html
+++ b/src/app/panel/pages/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
 </div>
 
 <!-- ROW OPEN  *ngIf="group_name=='AFILIADO'" -->
-<div class="row" *ngIf="rango">
+<div class="row" *ngIf="rango && group_name=='AFILIADO'">
     <div class="col-sm-12 col-md-3 col-lg-3">
         <div class="card bg-dark img-card box-dark-shadow">
             <div class="card-body">
@@ -116,6 +116,61 @@
                         <p class="text-white mb-0">Comisión del Mes</p>
                     </div>
                     <div class="ms-auto"> <i class="fa fa-money text-white fs-30 me-2 mt-2"></i> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-12 col-md-3 col-lg-3">
+        <div class="card bg-info img-card box-info-shadow">
+            <div class="card-body">
+                <div class="d-flex">
+                    <div class="text-white">
+                        <h2 class="mb-0 number-font">{{days}} Días</h2>
+                        <p class="text-white mb-0">Finalizar Mes</p>
+                    </div>
+                    <div class="ms-auto"> <i class="fa fa-calendar-o text-white fs-30 me-2 mt-2"></i> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- COL END -->
+</div>
+<div class="row" *ngIf="rango && group_name=='ADMINISTRADOR'">
+    <div class="col-sm-12 col-md-3 col-lg-3">
+        <div class="card bg-secondary img-card box-secondary-shadow">
+            <div class="card-body">
+                <div class="d-flex">
+                    <div class="text-white">
+                        <h2 class="mb-0 number-font">{{rango.cantidad_puntos.num_afiliados}}</h2>
+                        <p class="text-white mb-0">N° Afiliados</p>
+                    </div>
+                    <div class="ms-auto"> <i class="fa fa-user-o text-white fs-30 me-2 mt-2"></i> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-12 col-md-3 col-lg-3">
+        <div class="card bg-info img-card box-info-shadow">
+            <div class="card-body">
+                <div class="d-flex">
+                    <div class="text-white">
+                        <h2 class="mb-0 number-font">{{rango.cantidad_puntos.n_reconsumos_standar}}</h2>
+                        <p class="text-white mb-0">N° Reconsumos Estándar</p>
+                    </div>
+                    <div class="ms-auto"> <i class="fa fa-ticket text-white fs-30 me-2 mt-2"></i> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-12 col-md-3 col-lg-3">
+        <div class="card bg-warning img-card box-info-shadow">
+            <div class="card-body">
+                <div class="d-flex">
+                    <div class="text-white">
+                        <h2 class="mb-0 number-font">{{rango.cantidad_puntos.n_reconsumos_premium}}</h2>
+                        <p class="text-white mb-0">N° Reconsumos Premium</p>
+                    </div>
+                    <div class="ms-auto"> <i class="fa fa-ticket text-white fs-30 me-2 mt-2"></i> </div>
                 </div>
             </div>
         </div>
