--- a/src/app/authentication/pages/register-link/register-link.component.html
+++ b/src/app/authentication/pages/register-link/register-link.component.html
@@ -263,6 +263,11 @@
         </div>
     </div>
     <!-- END PAGE -->
+    <div class="container d-flex align-items-center justify-content-center" style="background-color: aliceblue; height: 40px;">
+        <div class="text-center">
+            Copyright © {{date | date:'yyyy'}} <a href="javascript:void(0);">JATUN AYLLU</a> | Diseñado y Desarrollado <span class="fa fa-spotify text-primary"></span> por <a href="https://iprime.pe/" target="_blank"> iPrime.</a>        
+        </div>
+    </div>
 </div>
 <!-- Modal Validar -->
 <ng-template #add let-modal>
