--- a/src/app/panel/pages/comisiones/comisiones.component.html
+++ b/src/app/panel/pages/comisiones/comisiones.component.html
@@ -4,13 +4,13 @@
         <ol class="breadcrumb mb-0">
             <li class="breadcrumb-item"> <a href="javascript:void(0)"><i class="fe fe-home"></i></a></li> 
             <li class="breadcrumb-item"> <a href="javascript:void(0)">Dashboard</a></li>
-            <li class="breadcrumb-item active" aria-current="page">H. Reconsumo</li>
+            <li class="breadcrumb-item active" aria-current="page">H. Afiliados</li>
         </ol> 
     </div>
 </div>
 <div class="card">
     <div class="card-header">
-        HISTORIAL COMISIONES
+        COMISIONES AFILIADOS
     </div>
     <form [formGroup]="formfiltros" class="card-body row">
         <div class="col-sm-12 col-md-12 col-lg-12 text-center">
