--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!---Global-loader-->
-<div style="height:100vh;" id="glb-loader" class="loaderShow">
-  <img src="./assets/images/loader.svg" class="loader-img" alt="loader">
-</div>
+<!-- <div style="height:100vh;" id="glb-loader" class="loaderShow">
+  <img src="../assets/images/loader.svg" class="loader-img" alt="loader">
+</div> -->
 <!--- End Global-loader-->
 <router-outlet></router-outlet>
