--- a/src/app/panel/pages/h-reconsumo/h-reconsumo.component.html
+++ b/src/app/panel/pages/h-reconsumo/h-reconsumo.component.html
@@ -10,10 +10,36 @@
 </div>
 <div class="card">
     <div class="card-header">
-        HISTORIAL DE RECONSUMO
+        COMISIONES RECONSUMO
     </div>
     <form [formGroup]="formfiltros" class="card-body row">
-        <div class="col-md-12 col-sm-12 col-lg-3 mb-2">
+        <div class="col-sm-12 col-md-12 col-lg-12 text-center" *ngIf="total_ganancia>=0">
+            <span class="badge rounded-pill bg-primary" style="font-size: 15px;">COMISIÓN TOTAL: S/ {{(total_ganancia).toFixed(2)}}</span>
+        </div>
+        <br>
+        <div class="col-md-2 col-sm-12 col-lg-2 mb-2">
+            <div class="form-group">
+                <small class="form-label"><b>Fecha Inicio</b></small>
+                <input type="date" formControlName="fecha_inicio" class="form-control bordes text-muted"
+                       (change)="getfechainicio()">
+            </div>
+        </div>
+        <div class="col-md-2 col-sm-12 col-lg-2 mb-2">
+            <div class="form-group">
+                <small class="form-label"><b>Fecha Fin</b></small>
+                <input type="date" formControlName="fecha_fin" class="form-control bordes text-muted"
+                       (change)="getfechafin()">
+            </div>
+        </div>
+        <div class="col-md-2 col-sm-12 col-lg-2 mb-2">
+            <div class="form-group">
+                <small class="form-label "><b>Refrescar</b></small>
+                <button class="btn btn btn-white" (click)="rerender()" title="Cargar Data Actualizada"><i
+                        class="fa fa-refresh"></i></button>
+            </div>
+        </div>
+        <!-- <div class="col-md-3 col-sm-12 col-lg-3 mb-2"></div>
+        <div class="col-md-3 col-sm-12 col-lg-3 mb-2">
             <div class="form-group">
             <small class="form-label"><b>Filtrar Estado</b></small>
             <ng-select class="text-uppercase"
@@ -25,8 +51,59 @@
                         (change)="selectEstado($event)">
             </ng-select>
             </div>
-        </div>
+        </div> -->
         <div class="col-sm-12 col-md-12 col-lg-12">
+            <!--TABLA-->
+            <div class="table-responsive invoice-table" id="table">
+              <table class="table table-striped table-bordered" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                <thead>
+                <tr>
+                    <th class="text-center">NOMBRES Y APELLIDOS</th>
+                    <th class="text-center">CANTIDAD PRODUCTOS</th>
+                    <th class="text-center">IMPORTE</th>
+                    <th class="text-center">NIVEL</th>
+                    <th class="text-center">GANANCIAS</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let valComisiones of reconsumos">
+                    <!-- <td class="text-center text-dark text-capitalize">
+                        {{ordenes.created_at | date:'dd/MM/yyyy'}}
+                    </td> -->
+                    <td class="text-center text-dark">
+                        {{valComisiones.nombre_afiliado}}
+                    </td>
+                    <td class="text-center text-dark">
+                        <a href="javascript:void(0)" (click)="openModalIMG(valComisiones)">{{valComisiones.cantidad_productos}}</a>
+                    </td>
+                    <td class="text-center text-dark">
+                        S/ {{(+valComisiones.monto_neto).toFixed(2)}}
+                    </td>
+                    <td class="text-center text-dark">
+                        {{valComisiones.nivel}}
+                    </td>
+                    <td class="text-center text-dark">
+                        <div *ngIf="valComisiones.ganancia">
+                            <p>S/ {{(+valComisiones.ganancia).toFixed(2)}}</p>
+                        </div>
+                        <div *ngIf="!valComisiones.ganancia">
+                            <p>Sin Ganancia</p>
+                        </div>
+                    </td>
+                    <!-- <td class="text-center text-dark">
+                        <div *ngIf="valComisiones.cantidad_products">
+                            <p>{{+valComisiones.cantidad_products}}</p>
+                        </div>
+                        <div *ngIf="!valComisiones.cantidad_products">
+                            <p>Sin Productos</p>
+                        </div>
+                    </td> -->
+                </tr>
+                </tbody>
+              </table>
+            </div>
+        </div>
+        <!-- <div class="col-sm-12 col-md-12 col-lg-12">
             <div class="table-responsive invoice-table" id="table">
                 <ng-template #idTpl let-rowIndex="rowIndex" let-row="row">
                     {{rowIndex+1}}
@@ -48,18 +125,32 @@
                 <table id="material--template-dt" datatable *ngIf="columns.length" [dtOptions]="dtOptions" id="table"
                 style="width: 100%;" [dtTrigger]="dtTrigger"></table>
             </div>
-        </div>
+        </div> -->
     </form>
 </div>
 <!-- Modal IMG -->
 <ng-template #modal_img let-modal>
     <div class="modal-body row">
         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-            <h5>Imagen Comprobante {{data_detalle.cliente.nombre}} {{data_detalle.cliente.apellido}}</h5>
+            <h5>Compras de: {{data_detalle.nombre_afiliado}}</h5>
             <hr>
         </div>
-        <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-           <img src="{{data_detalle.url_voucher}}" alt="#" style="width: 100%;">
+        <div class="col-lg-12 col-md-12 col-sm-12 text-center" *ngFor="let data of data_detalle.productos">
+            <div class="card" style="border: 1px solid rgb(206, 206, 206) !important;">
+                <div class="row" style="margin:2% 2% 2% 2%">
+                    <div class="col-lg-4 col-md-4 col-sm-12 text-center">
+                        <img src="{{data.producto__url_img}}" alt="" style="width: 35%;">
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 text-center d-flex align-items-center justify-content-center" 
+                        style="border-left: 1px solid rgb(206, 206, 206);">
+                        <h5>Producto: <br><br>{{data.producto__nombre}}</h5>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 text-center d-flex align-items-center justify-content-center" 
+                        style="border-left: 1px solid rgb(206, 206, 206);">
+                        <h5>Cantidad: <br><br>{{data.cantidad}}</h5>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
             <hr>
