--- a/src/app/shared/layout-components/footer/footer.component.html
+++ b/src/app/shared/layout-components/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row align-items-center flex-row-reverse">
             <div class="col-md-12 col-sm-12 text-center">
-                 Copyright © {{date | date:'yyyy'}} <a href="javascript:void(0);">JATUN AYLLU</a>. Diseñado <span class="fa fa-spotify text-primary"></span> por <a href="javascript:void(0);"> iPrime. </a> Todos los Derechos Resevados.
+                Copyright © {{date | date:'yyyy'}} <a href="javascript:void(0);">JATUN AYLLU</a> | Diseñado y Desarrollado <span class="fa fa-spotify text-primary"></span> por <a href="https://iprime.pe/" target="_blank"> iPrime.</a>
             </div>
         </div>
     </div>
