--- a/src/app/authentication/pages/login-page/login-page.component.html
+++ b/src/app/authentication/pages/login-page/login-page.component.html
@@ -49,7 +49,7 @@
                                                     </div>
                                                 </form>
                                             </ng-template>
-                                            </li>
+                                        </li>
                                     </ul>
                                 </div>
                                 <div class="card card-group mb-0">
@@ -65,9 +65,9 @@
                 </div>
             </div>
         </div>
-        <div class="container d-flex align-items-center justify-content-center" style="background-color: aliceblue; height: 40px;">
+        <div class="container d-flex align-items-center justify-content-center" style="background-color: aliceblue; height: 40px; position: relative">
             <div class="text-center">
-                Copyright © {{date | date:'yyyy'}} <a href="javascript:void(0);">JATUN AYLLU</a> | Diseñado y Desarrollado <span class="fa fa-spotify text-primary"></span> por <a href="https://iprime.pe/" target="_blank"> iPrime.</a>        
+                Copyright © {{date | date:'yyyy'}} <a href="javascript:void(0);">JATUN AYLLU</a> | Diseñado y Desarrollado <span class="fa fa-spotify text-primary"></span> por <a href="https://iprime.pe/" target="_blank"> iPrime.</a>
             </div>
         </div>
     </div>
