--- a/src/app/authentication/pages/register/register.component.html
+++ b/src/app/authentication/pages/register/register.component.html
@@ -210,7 +210,7 @@
         </div>
     </div>
     <!-- END PAGE -->
-    <div class="container d-flex align-items-center justify-content-center" style="background-color: aliceblue; height: 40px;">
+    <div class="container d-flex align-items-center justify-content-center" style="background-color: aliceblue; height: 40px; position: relative">
         <div class="text-center">
             Copyright © {{date | date:'yyyy'}} <a href="javascript:void(0);">JATUN AYLLU</a> | Diseñado y Desarrollado <span class="fa fa-spotify text-primary"></span> por <a href="https://iprime.pe/" target="_blank"> iPrime.</a>        
         </div>
