--- a/src/app/panel/pages/comisiones/comisiones.component.html
+++ b/src/app/panel/pages/comisiones/comisiones.component.html
@@ -1,4 +1,4 @@
-<div class="page-header">
+<!-- <div class="page-header">
     <h1 class="page-title my-auto">Jatun Ayllu</h1>
     <div>
         <ol class="breadcrumb mb-0">
@@ -7,8 +7,56 @@
             <li class="breadcrumb-item active" aria-current="page">H. Afiliados</li>
         </ol> 
     </div>
-</div>
+</div> -->
 <div class="card">
+    <div class="card-body row">
+        <div class="col-sm-12 col-md-12 col-lg-12 text-center">
+            <span class="badge bg-success" style="font-size: 13px;">COMISIÓN: S/ {{(total_ganancia).toFixed(2)}}</span>
+        </div>
+        <br>
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <!--TABLA-->
+            <div class="table-responsive invoice-table" id="table">
+              <table class="table table-striped table-bordered" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                <thead>
+                <tr>
+                    <th class="text-center">NOMBRES Y APELLIDOS</th>
+                    <th class="text-center">PACK</th>
+                    <th class="text-center">IMPORTE</th>
+                    <th class="text-center">NIVEL</th>
+                    <th class="text-center">GANANCIAS</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let valComisiones of comisiones">
+                    <td class="text-center text-dark">
+                        {{valComisiones.nombre}} {{valComisiones.apellido}}
+                    </td>
+                    <td class="text-center text-dark">
+                        {{valComisiones.pack_name}}
+                    </td>
+                    <td class="text-center text-dark">
+                        <div *ngIf="valComisiones.importe">
+                            <p>S/ {{(+valComisiones.importe).toFixed(2)}}</p>
+                        </div>
+                        <div *ngIf="!valComisiones.importe">
+                            <p>Sin Importe</p>
+                        </div>
+                    </td>
+                    <td class="text-center text-dark">
+                        {{valComisiones.nivel}}
+                    </td>
+                    <td class="text-center text-dark">
+                        S/ {{(+valComisiones.ganancias).toFixed(2)}}
+                    </td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- <div class="card">
     <div class="card-header">
         COMISIONES AFILIADOS
     </div>
@@ -39,7 +87,6 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-12">
-            <!--TABLA-->
             <div class="table-responsive invoice-table" id="table">
               <table class="table table-striped table-bordered" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                 <thead>
@@ -53,9 +100,6 @@
                 </thead>
                 <tbody>
                 <tr *ngFor="let valComisiones of comisiones">
-                    <!-- <td class="text-center text-dark text-capitalize">
-                        {{ordenes.created_at | date:'dd/MM/yyyy'}}
-                    </td> -->
                     <td class="text-center text-dark">
                         {{valComisiones.nombre}} {{valComisiones.apellido}}
                     </td>
@@ -70,14 +114,6 @@
                             <p>Sin Importe</p>
                         </div>
                     </td>
-                    <!-- <td class="text-center text-dark">
-                        <div *ngIf="valComisiones.cantidad_products">
-                            <p>{{+valComisiones.cantidad_products}}</p>
-                        </div>
-                        <div *ngIf="!valComisiones.cantidad_products">
-                            <p>Sin Productos</p>
-                        </div>
-                    </td> -->
                     <td class="text-center text-dark">
                         {{valComisiones.nivel}}
                     </td>
@@ -90,6 +126,6 @@
             </div>
         </div>
     </form>
-</div>
+</div> -->
 <!-- SPINNER -->
 <ngx-spinner type="timer"></ngx-spinner>
