--- a/src/app/panel/pages/h-reconsumo/h-reconsumo.component.html
+++ b/src/app/panel/pages/h-reconsumo/h-reconsumo.component.html
@@ -1,4 +1,4 @@
-<div class="page-header">
+<!-- <div class="page-header">
     <h1 class="page-title my-auto">Jatun Ayllu</h1>
     <div>
         <ol class="breadcrumb mb-0">
@@ -7,8 +7,56 @@
             <li class="breadcrumb-item active" aria-current="page">H. Reconsumo</li>
         </ol> 
     </div>
-</div>
+</div> -->
 <div class="card">
+    <div class="card-body row">
+        <div class="col-sm-12 col-md-12 col-lg-12 text-center" *ngIf="total_ganancia>=0">
+            <span class="badge bg-success" style="font-size: 13px;">COMISIÓN: S/ {{(total_ganancia).toFixed(2)}}</span>
+        </div>
+        <br>
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <!--TABLA-->
+            <div class="table-responsive invoice-table" id="table">
+              <table class="table table-striped table-bordered" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                <thead>
+                <tr>
+                    <th class="text-center">NOMBRES Y APELLIDOS</th>
+                    <th class="text-center">CANTIDAD PRODUCTOS</th>
+                    <th class="text-center">IMPORTE</th>
+                    <th class="text-center">NIVEL</th>
+                    <th class="text-center">GANANCIAS</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let valComisiones of reconsumos">
+                    <td class="text-center text-dark">
+                        {{valComisiones.nombre_afiliado}}
+                    </td>
+                    <td class="text-center text-dark">
+                        <a href="javascript:void(0)" (click)="openModalIMG(valComisiones)">{{valComisiones.cantidad_productos}}</a>
+                    </td>
+                    <td class="text-center text-dark">
+                        S/ {{(+valComisiones.monto_neto).toFixed(2)}}
+                    </td>
+                    <td class="text-center text-dark">
+                        {{valComisiones.nivel}}
+                    </td>
+                    <td class="text-center text-dark">
+                        <div *ngIf="valComisiones.ganancia">
+                            <p>S/ {{(+valComisiones.ganancia).toFixed(2)}}</p>
+                        </div>
+                        <div *ngIf="!valComisiones.ganancia">
+                            <p>Sin Ganancia</p>
+                        </div>
+                    </td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- <div class="card">
     <div class="card-header">
         COMISIONES RECONSUMO
     </div>
@@ -38,22 +86,7 @@
                         class="fa fa-refresh"></i></button>
             </div>
         </div>
-        <!-- <div class="col-md-3 col-sm-12 col-lg-3 mb-2"></div>
-        <div class="col-md-3 col-sm-12 col-lg-3 mb-2">
-            <div class="form-group">
-            <small class="form-label"><b>Filtrar Estado</b></small>
-            <ng-select class="text-uppercase"
-                        formControlName="estados"
-                        [items]="estados"
-                        bindLabel="name"
-                        bindValue="id"
-                        placeholder="SELECCIONAR ESTADO"
-                        (change)="selectEstado($event)">
-            </ng-select>
-            </div>
-        </div> -->
         <div class="col-sm-12 col-md-12 col-lg-12">
-            <!--TABLA-->
             <div class="table-responsive invoice-table" id="table">
               <table class="table table-striped table-bordered" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                 <thead>
@@ -67,9 +100,6 @@
                 </thead>
                 <tbody>
                 <tr *ngFor="let valComisiones of reconsumos">
-                    <!-- <td class="text-center text-dark text-capitalize">
-                        {{ordenes.created_at | date:'dd/MM/yyyy'}}
-                    </td> -->
                     <td class="text-center text-dark">
                         {{valComisiones.nombre_afiliado}}
                     </td>
@@ -90,20 +120,12 @@
                             <p>Sin Ganancia</p>
                         </div>
                     </td>
-                    <!-- <td class="text-center text-dark">
-                        <div *ngIf="valComisiones.cantidad_products">
-                            <p>{{+valComisiones.cantidad_products}}</p>
-                        </div>
-                        <div *ngIf="!valComisiones.cantidad_products">
-                            <p>Sin Productos</p>
-                        </div>
-                    </td> -->
                 </tr>
                 </tbody>
               </table>
             </div>
         </div>
-        <!-- <div class="col-sm-12 col-md-12 col-lg-12">
+        <div class="col-sm-12 col-md-12 col-lg-12">
             <div class="table-responsive invoice-table" id="table">
                 <ng-template #idTpl let-rowIndex="rowIndex" let-row="row">
                     {{rowIndex+1}}
@@ -125,9 +147,9 @@
                 <table id="material--template-dt" datatable *ngIf="columns.length" [dtOptions]="dtOptions" id="table"
                 style="width: 100%;" [dtTrigger]="dtTrigger"></table>
             </div>
-        </div> -->
+        </div>
     </form>
-</div>
+</div> -->
 <!-- Modal IMG -->
 <ng-template #modal_img let-modal>
     <div class="modal-body row">
