--- a/src/app/panel/pages/referidos/referidos.component.html
+++ b/src/app/panel/pages/referidos/referidos.component.html
@@ -95,7 +95,7 @@
                             <div class="col-lg-4 col-md-4 col-sm-12">
                                 <div class="form-group">
                                     <ng-select formControlName="pais"
-                                            [items]="pais"
+                                            [items]="countries"
                                             bindLabel="name"
                                             bindValue="id"
                                             placeholder="SELECCIONAR PAIS*"
